css/style.css
body {
    font-family: Arial, sans-serif;
}

.hero {
    min-height: 70vh;
}

footer {
    margin-top: 50px;
}
.card img {
    height: 300px;
    object-fit: cover;
}
body {
    font-family: Arial, sans-serif;
}

.card img {
    height: 300px;
    object-fit: cover;
}

footer {
    margin-top: 50px;
}
.card-img-top {
    height: 350px;
    object-fit: cover;
}
.dark-mode {
    background-color: #121212;
    color: white;
}

.dark-mode .card {
    background-color: #1e1e1e;
    color: white;
}

.dark-mode footer {
    background-color: #000;

}
body {
    font-family: Arial, sans-serif;
}

.card-img-top {
    height: 350px;
    object-fit: cover;
}

.card {
    transition: transform 0.3s;
}

.card:hover {
    transform: scale(1.03);
}

.hero {
    min-height: 70vh;
}

footer {
    margin-top: 50px;
}

.dark-mode {
    background-color: #121212;
    color: white;
}

.dark-mode .card {
    background-color: #1e1e1e;
    color: white;
}

.dark-mode .navbar {
    background-color: #000 !important;
}

.dark-mode footer {
    background-color: #000;
}
.carousel-item img {
    object-fit: cover;
}

@media (max-width: 768px) {

    .carousel-item img {
        height: 300px;
    }

    h1 {
        font-size: 2rem;
    }

    h2 {
        font-size: 1.7rem;
    }
}
#topBtn {
    position: fixed;
    bottom: 20px;
    right: 20px;
    display: none;
}
.btn {
    transition: 0.3s;
}

.btn:hover {
    transform: scale(1.05);
}

